[gd_scene load_steps=6 format=3 uid="uid://dyxl1rl5r1lbt"]

[ext_resource type="Script" uid="uid://dgb2mh4a61i5v" path="res://Scripts/Objects/airport_node.gd" id="1_a28fk"]
[ext_resource type="AudioStream" uid="uid://cjbnjqybw4nag" path="res://Assets/Audio/SFX/UI/click.wav" id="2_lplos"]
[ext_resource type="AudioStream" uid="uid://deafa8faxbvde" path="res://Assets/Audio/SFX/Game/add_airport.wav" id="3_nm7o8"]
[ext_resource type="BitMap" uid="uid://cl6n663t3t7lm" path="res://Assets/Textures/Icon/Airport/click_mask.png" id="4_ais0v"]
[ext_resource type="Texture2D" uid="uid://du8yq74suaot0" path="res://Assets/Textures/Icon/Airport/small_airport.png" id="5_7tpil"]

[node name="Airport" type="Node3D" groups=["airport"]]
script = ExtResource("1_a28fk")
airport_info_sound = ExtResource("2_lplos")
add_airport_sound = ExtResource("3_nm7o8")
texture_click_mask = ExtResource("4_ais0v")

[node name="Icon" type="TextureButton" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 1
texture_normal = ExtResource("5_7tpil")
ignore_texture_size = true
stretch_mode = 5

[node name="AirportInfo" type="AudioStreamPlayer" parent="."]

[node name="AddAirport" type="AudioStreamPlayer" parent="."]

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="mouse_entered" from="Icon" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Icon" to="." method="_on_pressed"]
